# StonksBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: DetectArchitectures.cmake
dependencies/x64-OpenSSL/lib/: ssl.lib
dependencies/x86-OpenSSL/lib/: ssl.lib
src/: main.cpp
src/Core/: Client.cpp  Client.h  CommandHandler.cpp  CommandHandler.h  Database.cpp  Database.h
src/Extras/: Hash.h
